replaced grid with tiles, refactored Copy and Edit buttons

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <title>Password Keeper</title>
+    <title>PassKeeper Thingy</title>
   </head>
   <body>
     <div id="root"></div>
