--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Jura:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Play:400" rel="stylesheet">
     <title>PassKeeper Thingy</title>
   </head>
   <body>
